FCurve Modifier affecting keyframe after being deleted #42148

Closed
opened 2014-10-08 17:00:14 +02:00 by Maverick · 27 comments

System Information
win8-64 i7 gtx titan

Blender Version
blender-2.71-7c9b8aa-win64

Short description of error
F-Curve modifier still influences the curve after being deleted.

Exact steps for others to reproduce the error
1.Default cube, insert rotation
2.Go to Graph Editor and add a Noise modifier
3.Copy-Paste the modifier (important, does not work if you just add a new modifier !)
4.Press alt+a
5.Delete both modifiers and press alt+a again: cube is still affected

Check attached file as well (just press alt+a)

{F115482}

**System Information** win8-64 i7 gtx titan **Blender Version** blender-2.71-7c9b8aa-win64 **Short description of error** F-Curve modifier still influences the curve after being deleted. **Exact steps for others to reproduce the error** 1.Default cube, insert rotation 2.Go to Graph Editor and add a Noise modifier 3.Copy-Paste the modifier (*important*, does not work if you just add a new modifier !) 4.Press alt+a 5.Delete both modifiers and press alt+a again: cube is still affected Check attached file as well (just press alt+a) {F115482}
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @dragostanasie

Added subscriber: @dragostanasie
Author
[bug_minimal.blend](https://archive.blender.org/developer/F115483/bug_minimal.blend)
Author

bug_minimal.blend.jpg

![bug_minimal.blend.jpg](https://archive.blender.org/developer/F115486/bug_minimal.blend.jpg)

Added subscriber: @mont29

Added subscriber: @mont29

Please check with latest Blender release! 2.72.

Cannot reproduce here (latest master, linux64).

Please check with latest Blender release! 2.72. Cannot reproduce here (latest master, linux64).
Author

oopss...sorry..I wrote the wrong blender version !
this was tested with latest git from buildbot

Windows 64 bit Official blender-2.72-47b8bf5-win64.zip 95M Wed Oct 8 03:01:02 2014

oopss...sorry..I wrote the wrong blender version ! this was tested with latest git from buildbot Windows 64 bit Official blender-2.72-47b8bf5-win64.zip 95M Wed Oct 8 03:01:02 2014
Author

great..the text is now badly formatted...please make it possible to be able to copy the blender version from the splash screen

blender-2.72-47b8bf5-win64.zip

great..the text is now badly formatted...please make it possible to be able to copy the blender version from the splash screen blender-2.72-47b8bf5-win64.zip

Added subscriber: @MartijnBerger

Added subscriber: @MartijnBerger

Martijn, mind checking this on windows? thanks

Martijn, mind checking this on windows? thanks
Member

Added subscriber: @GregZaal

Added subscriber: @GregZaal
Member

Works fine here (also linux 64bit) - can test later on windows, but I somehow doubt that has anything to do with it.

Works fine here (also linux 64bit) - can test later on windows, but I somehow doubt that has anything to do with it.
Author

Makes me make a video (or it's just a windows issue).

Makes me make a video (or it's just a windows issue).
Martijn Berger was assigned by Bastien Montagne 2014-10-08 20:38:43 +02:00

Added subscriber: @JoshuaLeung

Added subscriber: @JoshuaLeung
Member

Added subscriber: @elubie

Added subscriber: @elubie
Member

I can confirm this happens when repeating the exact steps to reproduce on Windows 64 bit build 2.72 official release

I can confirm this happens when repeating the exact steps to reproduce on Windows 64 bit build 2.72 official release
Author

Found out that it breaks the animation even if you don't delete the modifiers.
After some time the animation fluctuates around some random value regardless of what parameters you change in the two modifiers.

Found out that it breaks the animation even if you don't delete the modifiers. After some time the animation fluctuates around some random value regardless of what parameters you change in the two modifiers.
Member

Added subscriber: @antont

Added subscriber: @antont
Member

curious if this indeed is win specific (perhaps due to vs2013 like axys suspected on irc)

curious if this indeed is win specific (perhaps due to vs2013 like axys suspected on irc)
Member

Wait a moment...

Up till tonight, I haven't been able to reproduce any issues (using a mingw64 bit build). However, after seeing Maverick's screenshot from Oct 9, I think I might have a clue what might be going on.

Specifically, when I was testing earlier, I was actually doing a few things differently. Namely, the procedure I followed was to:

  1. Expand the group, and select one of the FCurves (usually the first or second)
  2. Add a modifier to that FCurve
  3. Copy the modifiers
  4. Paste modifiers to the same FCurve or another one
  5. Delete these modifiers one by one

However, from the looks of things, you're simply adding adding the modifier, then pressing copy/paste without expanding the group. This in turn seems to be adding the modifiers to all the FCurves in the group (since all of them are selected). Now, since you haven't expanded the group though, deleting the two modifiers from the UI only deletes them from the active FCurve and not from the other FCurves too.

Is this what is happening in your case?

Wait a moment... Up till tonight, I haven't been able to reproduce any issues (using a mingw64 bit build). However, after seeing Maverick's screenshot from Oct 9, I think I might have a clue what might be going on. Specifically, when I was testing earlier, I was actually doing a few things differently. Namely, the procedure I followed was to: 1) Expand the group, and select one of the FCurves (usually the first or second) 2) Add a modifier to that FCurve 3) Copy the modifiers 4) Paste modifiers to the same FCurve or another one 5) Delete these modifiers one by one However, from the looks of things, you're simply adding adding the modifier, then pressing copy/paste without expanding the group. This in turn seems to be adding the modifiers to all the FCurves in the group (since all of them are selected). Now, since you haven't expanded the group though, deleting the two modifiers from the UI only deletes them from the active FCurve and not from the other FCurves too. Is this what is happening in your case?
Bastien Montagne changed title from Modifier affecting keyframe after being deleted to FCurve Modifier affecting keyframe after being deleted 2014-10-14 13:51:12 +02:00
Member

@JoshuaLeung Bingo! I tried to play again and it is indeed the case that the pasted modifier gets added to all X, Y and Z rotation while delete only deletes it from the active FCurve. I was a bit confused about the pasting to all selected FCurves, but have to admit that this probably is the correct behaviour.

@JoshuaLeung Bingo! I tried to play again and it is indeed the case that the pasted modifier gets added to all X, Y and Z rotation while delete only deletes it from the active FCurve. I was a bit confused about the pasting to all selected FCurves, but have to admit that this probably is the correct behaviour.
Member

Removed subscriber: @antont

Removed subscriber: @antont
Author

Ok, given the further testing by you guys I think we can better formulate the issue here:

1.Clicking "Add Modifier" adds the modifier on first channel ONLY (X in this case)
2.All the channels are selected though (this is not visible because the "Rotation" group is closed)
3.When you copy-paste the modifier the "Paste" command considers all the selected channels.

Proper solution here is to add the modifier to all selected channels.
If the group is closed and you select it then you expect the modifier to be added to all the channels.

Ok, given the further testing by you guys I think we can better formulate the issue here: 1.Clicking "Add Modifier" adds the modifier on first channel *ONLY* (X in this case) 2.All the channels are selected though (this is not visible because the "Rotation" group is closed) 3.When you copy-paste the modifier the "Paste" command considers all the selected channels. Proper solution here is to add the modifier to all selected channels. If the group is closed and you select it then you expect the modifier to be added to all the channels.
Martijn Berger was unassigned by Joshua Leung 2014-12-01 14:09:39 +01:00
Joshua Leung self-assigned this 2014-12-01 14:09:39 +01:00
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Member

@JoshuaLeung, what's up with this? Is it still on your radar?

@JoshuaLeung, what's up with this? Is it still on your radar?

This issue was referenced by 344c17f439

This issue was referenced by 344c17f439394f263a20b117326c5d2c068a3896
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
8 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42148
No description provided.