Fix T42148: Copying/Pasting FModifiers copies to all selected FCurves, not just active one